# qstrader

./: .gitignore  README.md  fx_tickers.txt  ingest.py  pyproject.toml  run.py  tickers.txt  xop_tickers.txt
backtests/: buy_and_hold.py  index_arb.py  long_short.py  momentum_taa.py  pairs_bollinger.py  pairs_johansen_reversion.py  pairs_kalman.py  pairs_log_spread.py  pairs_price_spread.py  sixty_forty.py  sixty_forty_fees.py  xop_buy_on_gap.py
data/: GLD.csv
qstrader/alpha_model/: buy_on_gap.py  fixed_signals.py  pairs_bollinger.py  pairs_johansen.py  pairs_kalman.py  pairs_log_spread.py  pairs_price_spread.py  stat_arb_etf.py  top_nm_momentum.py
qstrader/data/: backtest_data_handler.py  daily_bar_csv.py
qstrader/exchange/: simulated_exchange.py
qstrader/signals/: arb_position_collection.py  buffer.py  johansen_etf_log_price_weights_collection.py  johansen_zscore.py  kalman_innovation_variance.py  log_zscore.py  ma_collection.py  momentum.py  price_zscore.py  sma.py  std_retuns_collection.py
qstrader/statistics/: json_statistics.py
